Added first version of menu