@@ -2,9 +2,12 @@
 # we can test code here and delete this branch at any time
 # 
 # This is maven project. Created using IntelliJ Idea.
-#	- in File/Project Structure.../Project, I set Project SDK: 14(java version"14") 
-#	  and Project language level: X - Experimantal features
-#
+#	- in File/Project Structure.../Project, 
+#	  I set Project SDK: 14(java version"14") 
+#	  and Project language level: X - Experimantal features,
+#  	- in Run/Edit Configurations/VM options: 
+#	   --module-path /path/to/javafx-sdk-14/lib --add-modules javafx.controls,javafx.fxml
+#	  
 #
 # Author of the code in Main class is Oliwia
 # Sorry for bad english ;)
